--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
+    "bootstrap-vue": "^2.23.1",
+    "vee-validate": "^4.11.8",
+    "vue": "^3.3.7",
+    "vue-jwt-decode": "^0.1.0",
+    "vue-multiselect": "^3.0.0-beta.3",
+    "vue-router": "^4.2.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
